Fixed modality.css: @font-face declaration was not working on iOS

--- a/modality-base/modality-base-client-css-web/src/main/resources/public/one/modality/base/client/css/modality.css
+++ b/modality-base/modality-base-client-css-web/src/main/resources/public/one/modality/base/client/css/modality.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: "Montserrat";
-    src: url("Montserrat-VF.woff2") format(woff2) tech(variations);
+    src: url("./Montserrat-VF.woff2") format("woff2");
     font-weight: 100 900;
 }
 
